# md.agile

./: .gitignore  0_dummy_tasks.agile.md  1_tasks.agile.md  CLAUDE.md  Cargo.toml  DEVELOP.md  GLOSSARY.md  INSTALL.md  LICENSE  MANIFESTO.md  README.md  README.vision.md  docker-compose.yml  mdagile.toml  milstones_archi.md.tmp  othertasks.agile.md  plan_e010.md  review.tmp.md  tasks.agile.md  tests_count.txt
.claude/: settings.local.json
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  main.rs
crates/cli/src/checker/: mod.rs  tests.rs
crates/cli/src/cli/: common.rs  logger.rs  mod.rs  tests.rs
crates/cli/src/cli/subcommands/: check.rs  default.rs  history.rs  history_tests.rs  list.rs  list_tests.rs  mod.rs  task.rs  task_tests.rs  when.rs
crates/cli/src/cli/subcommands/default/: tests.rs
crates/cli/src/config/: mod.rs  tests.rs
crates/cli/src/eta/: mod.rs  tests.rs
crates/cli/src/formatter/: mod.rs  tests.rs
crates/cli/src/git/: mod.rs  tests.rs
crates/cli/src/history_cache/: mod.rs  tests.rs
crates/cli/src/lifecycle_cache/: mod.rs  tests.rs
crates/cli/src/lsp/: goto_definition.rs  logger.rs  mod.rs  semantic_tokens.rs
crates/cli/src/lsp/logger/: tests.rs
crates/cli/src/lsp/quickfix/: invalid_box.rs  invalid_box_tests.rs  missing_space_after_box.rs  missing_space_after_box_tests.rs  missing_subtasks.rs  missing_subtasks_tests.rs  mod.rs  tests.rs  undefined_assignment.rs  undefined_assignment_tests.rs  undefined_property.rs  undefined_property_tests.rs  uppercase_x.rs  uppercase_x_tests.rs  wrong_body_indent.rs  wrong_body_indent_tests.rs  wrong_indentation.rs  wrong_indentation_tests.rs
crates/cli/src/parser/: mod.rs  tests.rs
crates/cli/src/rules/: mod.rs  tests.rs
crates/cli/src/rules/empty_title/: mod.rs  tests.rs
crates/cli/src/rules/incomplete_parent/: mod.rs  tests.rs
crates/cli/src/rules/invalid_box/: mod.rs  tests.rs
crates/cli/src/rules/invalid_order/: mod.rs  tests.rs
crates/cli/src/rules/missing_required_subtasks/: mod.rs  tests.rs
crates/cli/src/rules/missing_space_after_box/: mod.rs  tests.rs
crates/cli/src/rules/orphaned_subtask/: mod.rs  tests.rs
crates/cli/src/rules/unauthorized_completion/: mod.rs  tests.rs
crates/cli/src/rules/undefined_assignment/: mod.rs  tests.rs
crates/cli/src/rules/undefined_property/: mod.rs  tests.rs
crates/cli/src/rules/unrequired_quoted_subtask/: mod.rs  tests.rs
crates/cli/src/rules/uppercase_x/: mod.rs  tests.rs
crates/cli/src/rules/wrong_body_indent/: mod.rs  tests.rs
crates/cli/src/rules/wrong_indentation/: mod.rs  tests.rs
crates/cli/tests/: acceptance.rs  check.rs  config.rs  conventions.rs  find_task_files.rs  integration.rs  list_tasks.rs  lsp_basic.rs
crates/cli/tests/acceptance/: checks.rs  config.rs  default.rs  file.rs  helpers.rs  history.rs  list.rs  lsp.rs  lsp_basic.rs  task.rs  when.rs
crates/cli/tests/acceptance/checks/: clean.rs  config_unknown_keys.rs  e001.rs  e002.rs  e003.rs  e004.rs  e005.rs  e006.rs  e007.rs  e008.rs  e009.rs  e010.rs  e011.rs  e012.rs  e013.rs  e014.rs  e015.rs  e016.rs  group_member_validation.rs
crates/cli/tests/acceptance/config/: loading.rs
crates/cli/tests/acceptance/default/: editor.rs
crates/cli/tests/acceptance/list/: files.rs  tasks.rs
crates/cli/tests/acceptance/lsp/: code_action.rs  config_error.rs  diagnostics.rs  e013.rs  goto_definition.rs  helpers.rs  lifecycle.rs
crates/cli/tests/acceptance/task/: done.rs  list.rs  next.rs  undone.rs
crates/cli/tests/checks/: clean.rs  e001.rs  e008.rs  mod.rs
crates/cli/tests/integration/: find_task_files.rs  next_task.rs  priority_ordering.rs
crates/gui/: Cargo.toml  Dioxus.toml  README.md  index.html
crates/gui/public/: style.css  tasks.agile.md
crates/gui/src/: lib.rs  main.rs  main_tests.rs  physics.rs  server.rs  slots.rs
crates/gui/src/card_positioning/: mod.rs  tests.rs
crates/gui/src/logic/: mod.rs  tests.rs
crates/gui/src/physics/: tests.rs
crates/gui/src/server/: mod.rs
crates/gui/src/slots/: tests.rs
doc/: architecture.md  assignment-validation.md  checks.md  cli-structure.md  (+1 more)
(+57 files in other folders)
