[package]
name = "mdagile"
version.workspace = true
edition.workspace = true

[lib]
path = "src/api.rs"

[[bin]]
name = "agile"
path = "src/main.rs"

[[bin]]
name = "agilels"
path = "src/bin/agilels.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
default = "0.1.2"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
