[package]
name = "mdagile"
version.workspace = true
edition.workspace = true

[lib]
path = "src/api.rs"

[[bin]]
name = "agile"
path = "src/main.rs"

[[bin]]
name = "agilels"
path = "src/bin/agilels.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
default = "0.1.2"
env_logger = "0.11"
ignore = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "time"] }
tower-lsp = "0.20"
test-log = "0.2.21"
textplots = "0.8"
rgb = "0.8"
