[package]
name = "mdagile-gui"
version.workspace = true
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-logger = "0.7"
tracing = "0.1"
log = { version = "0.4" }
env_logger = "0.10"
console_log = "1.0.0"
once_cell = "1"

# Server-only: pulled in only when the `server` feature is active so it never
# enters the WASM build.
mdagile = { path = "../cli", optional = true }
notify = "8.2.0"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:mdagile"]
desktop = ["dioxus/desktop"]
