[package]
name = "mdagile-gui"
version.workspace = true
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
dioxus-logger = "0.7"
tracing = "0.1"
log = { version = "0.4" }
env_logger = "0.10"
console_log = "1.0.0"
once_cell = "1"
# Server-only: pulled in only when the `server` feature is active so it never
# enters the WASM build.
mdagile = { path = "../cli", optional = true }
dioxus-cli-config = { version = "0.7", optional = true }
notify = "8.2.0"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["sync"] }
wasmtimer = "0.4.3"
rand = { version = "0.10.1" }
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:mdagile", "dep:dioxus-cli-config"]
desktop = ["dioxus/desktop"]
